--- a/r_Rmd/December 2021.Rmd
+++ b/r_Rmd/December 2021.Rmd
@@ -44,7 +44,7 @@ knitr::opts_knit$set(
 clean_names <- janitor::clean_names  # this is because both {insight} and {janitor} have a clean_names()
 
 
-pacman::p_load(tidyverse, emo, pacman, flextable)
+pacman::p_load(tidyverse, emo, pacman, flextable, rio, here)
 
 theme_set(theme_bw(base_size = 15) + theme(legend.position = "bottom"))
 
@@ -3277,3 +3277,46 @@ joined %>%
             depth = sum(aim * distance * x),
             product = horizontal * depth)
 ```
+
+# Day 3: Binary Diagnostic
+
+The submarine has been making some odd creaking noises, so you ask it to produce
+a diagnostic report just in case.
+
+The diagnostic report (your puzzle input) consists of a list of binary numbers
+which, when decoded properly, can tell you many useful things about the
+conditions of the submarine. The first parameter to check is the power
+consumption.
+
+## Puzzle 1
+
+You need to use the binary numbers in the diagnostic report to generate two new
+binary numbers (called the gamma rate and the epsilon rate). The power
+consumption can then be found by multiplying the gamma rate by the epsilon rate.
+
+Use the binary numbers in your diagnostic report to calculate the gamma rate and epsilon rate, then multiply them together. What is the power consumption of the submarine? (Be sure to represent your answer in decimal, not binary.)
+
+```{r d-3-data, include = FALSE}
+
+options(scipen = 999)
+
+d3_mat <- read.table("data/aoc/d3.txt", header = FALSE) %>% 
+  mutate(V1 = str_pad(V1, 12, pad = "0")) 
+
+d3_mat <- str_split(d3_df$V1, "") %>% 
+  map(as.integer) %>% 
+  do.call(rbind, .)
+
+most_common <- round(colMeans(d3_mat, na.rm = T))
+
+least_common <- round(1 - colMeans(d3_mat, na.rm = TRUE))
+
+gamma <- strtoi(paste0(most_common, collapse = ""), base = 2)
+
+epsilon <- paste0(least_common, collapse = "") %>% strtoi(base = 2)
+
+gamma * epsilon
+```
+
+Answer #1:
+**`r gamma * epsilon`** `r emo::ji("star")`
